--- a/ch2BE/.project
+++ b/ch2BE/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ch2_BE</name>
+	<name>ch2BE</name>
 	<comment></comment>
 	<projects>
 	</projects>
